fix: resolve hydration mismatch in layout style: add custom scrollbar for improved UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,24 @@
     --card-border: #334155;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* track (background) */
+::-webkit-scrollbar-track {
+  background: #18a3ab; 
+}
+
+/* thumb (scroll part) */
+::-webkit-scrollbar-thumb {
+  background: #ffcc5c;
+  border-radius: 10px;
+}
+
+/* hover effect */
+::-webkit-scrollbar-thumb:hover {
+  background: #ffaa00;
+}
